--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ aiogram_dialog==2.3.1
 aiohappyeyeballs==2.6.1
 aiohttp==3.11.16
 aiosignal==1.3.2
+aiosqlite==0.21.0
 alembic==1.15.2
 annotated-types==0.7.0
 attrs==25.3.0
@@ -23,6 +24,7 @@ pydantic==2.11.3
 pydantic-settings==2.9.1
 pydantic_core==2.33.1
 python-dotenv==1.1.0
+redis==5.2.1
 SQLAlchemy==2.0.40
 typing-inspection==0.4.0
 typing_extensions==4.13.2
