--- a/requirements.txt
+++ b/requirements.txt
@@ -10,14 +10,20 @@ annotated-types==0.7.0
 anyio==4.9.0
 attrs==25.3.0
 babel==2.17.0
+blinker==1.9.0
 cachetools==5.5.2
 certifi==2025.1.31
 click==8.2.1
-fastapi==0.115.13
+dominate==2.9.1
+Flask==3.1.1
+Flask-Admin==1.6.1
+flask-babel==4.0.0
+Flask-Bootstrap==3.3.7.1
 frozenlist==1.6.0
 greenlet==3.2.0
 h11==0.16.0
 idna==3.10
+itsdangerous==2.2.0
 Jinja2==3.1.6
 magic-filter==1.0.12
 Mako==1.3.10
@@ -29,13 +35,16 @@ pydantic-settings==2.9.1
 pydantic_core==2.33.1
 python-dotenv==1.1.0
 python-multipart==0.0.20
+pytz==2025.2
 redis==5.2.1
 sniffio==1.3.1
-sqladmin==0.20.1
+speaklater==1.3
 SQLAlchemy==2.0.40
 starlette==0.46.2
 typing-inspection==0.4.0
 typing_extensions==4.13.2
 uvicorn==0.34.3
+visitor==0.1.3
+Werkzeug==3.1.3
 WTForms==3.1.2
 yarl==1.20.0
